# kyudo-tori-backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  scrapy.cfg  start.sh
app/: main.py  middlewares.py
app/api/v1/: api.py  schemas.py
app/api/v1/controllers/: shinsas.py
app/api/v1/routers/: shinsas.py
app/models/: __init__.py  dan.py  helper.py  shinsa.py  shinsa_dan.py
app/repositories/: dan.py  shinsa.py
app/seeds/: dans_seed.py  seed.py
app/seeds/datas/: dans.csv
app/services/: shinsa.py
db/: database.py
helpers/: date_helper.py  func_helper.py  path_helper.py  string_helper.py
migrations/: README  env.py
migrations/versions/: 1d433727f57c_initial_migration.py  bf8dd5eded27_initial_migration.py
models/: __init__.py  dan.py  shinsa.py  shinsa_dan.py
shinsa_tori_scraper/: items.py  middlewares.py  pipelines.py  settings.py
shinsa_tori_scraper/spiders/: aichi_spider.py  jp_kyudojo_spider.py  kyoto_spider.py
